Only allow sequence submission when valid - PMT #109151
This prevents the Submit button from being active when the sequence is
in a non-submittable state.

We'll also be setting the submittable state from React as the project
loads, during initialization. This is for the case where the response
is in a submittable state, but the user has just navigated to it without
doing any editing or saving.

--- a/mediathread/templates/projects/sequence_assignment_view.html
+++ b/mediathread/templates/projects/sequence_assignment_view.html
@@ -232,7 +232,7 @@
                             <a href="#" class="btn btn-primary btn-tab btn-save disabled">Saved</a>
                         </li>
                         <li role="presentation">
-                            <a href="#" class="btn btn-primary btn-tab btn-show-submit">Submit</a>
+                            <a href="#" class="btn btn-primary btn-tab btn-show-submit disabled">Submit</a>
                         </li>
                     {% endif %}
                     {% if is_faculty %}
