Sequence Assignment Editor: rearrange text

--- a/mediathread/templates/projects/sequence_assignment_edit.html
+++ b/mediathread/templates/projects/sequence_assignment_edit.html
@@ -153,6 +153,9 @@
                             {{form.response_view_policy}}
                         </div>
                         <div class="help-inline">Please choose how responses will be viewed.</div>
+                        <div><i>Note: After students respond to an assignment, they cannot edit their 
+                        response unless an instructor "unsubmits" it for further editing.</i></div><br />
+
                         <ul class="pager">
                             <li><a href="#" class="left prev">Previous</a></li>
                             <li><a href="#" class="right next">Next</a></li>
@@ -166,10 +169,6 @@
                             </div>
                         </div>
                         <div class="help-inline">Please select who can see your work.</div>
-
-                        <div><i>Note: After students respond to an assignment, they cannot edit their 
-                        response unless an instructor "unsubmits it" for further editing.</i></div><br />
-
                         <ul class="pager">
                             <li><a href="#" class="left prev">Previous</a></li>
                             <li><a href="#" class="right save">Save</a></li>
