Update juxtapose to d639aac4dc6cc11ad37a6d9e7cad2fce5206ae2d
Because I changed the sequence event names here:
https://github.com/ccnmtl/mediathread/pull/1244

The sequence tool needs to use these new event names in order to work
correctly.

--- a/mediathread/templates/projects/sequence_assignment_view.html
+++ b/mediathread/templates/projects/sequence_assignment_view.html
@@ -60,7 +60,7 @@
     </script>
 
     <script src="{{STATIC_URL}}juxtapose/loaders.css.js"></script>
-    <script src="{{STATIC_URL}}juxtapose/bundle-a.js"></script>
+    <script src="{{STATIC_URL}}juxtapose/bundle-b.js"></script>
 {% endblock %}
 
 {% block content %}
