Display sequence project body when not editable

--- a/mediathread/templates/projects/sequence.html
+++ b/mediathread/templates/projects/sequence.html
@@ -170,6 +170,8 @@
                 {% if response_can_edit %}
                     <textarea name="body" class="form-control mceEditor"
                               placeholder="Reflect on your sequence creation and intent">{{project.body|safe}}</textarea>
+                {% else %}
+                    {{project.body|safe}}
                 {% endif %}
             </div>
 
