--- a/mediathread/templates/projects/sequence.html
+++ b/mediathread/templates/projects/sequence.html
@@ -46,7 +46,7 @@
     var view = new SequenceView({
         el: jQuery('.sequence').first(),
         viewer: '{{request.user.username}}',
-        responseId: '{{the_response.id}}'
+        responseId: '{{project.id}}'
     });
     </script>
 
@@ -55,8 +55,6 @@
 {% endblock %}
 
 {% block content %}
-{% with public_url=the_response.public_url %}
-{% with the_feedback=the_response.feedback_discussion %}
 
 <div class="sequence">
     <div class="spacer"></div>
@@ -123,13 +121,6 @@
                     <a href="#reflection" aria-controls="reflection" role="tab" data-toggle="tab">
                         Reflection</a>
                 </li>
-                {% if is_faculty or response_can_edit and the_feedback %}
-                    <li role="presentation">
-                        <a href="#feedback" aria-controls="feedback" role="tab" data-toggle="tab">
-                            Feedback
-                        </a>
-                    </li>
-                {% endif %}
                 {% if response_can_edit %}
                     <button class="btn btn-primary btn-tab btn-save disabled" disabled="disabled">Save</button>
                 {% endif %}
@@ -159,59 +150,8 @@
                     {{project.body|safe}}
                 {% endif %}
             </div>
-
-            {% if is_faculty or response_can_edit and the_feedback %}
-                <div role="tabpanel" class="tab-pane fade" id="feedback">
-                    {% if is_faculty %}
-                        <form method="post" data-username="{{project.author.username}}"
-                              {% if the_feedback %}
-                              action="/discussion/comment/{{the_feedback.id}}/">
-                              {% else %}
-                            action="/discussion/create/">
-                              {% endif %}
-
-                              {% if the_feedback %}
-                                  <div class="left"><b>{% public_name for the_feedback.user %}</b></div>
-                                  <div class="right"><b>{{the_feedback.submit_date|date:"m/d/Y h:i a"}}</b></div>
-                                  <div class="clearfix"></div>
-                                  <div class="spacer"></div>
-                              {% else %}
-                                  <input type="hidden" name="comment_html" value="{{project.title}} feedback" />
-                                  <input type="hidden" name="publish" value="PrivateStudentAndFaculty" />
-                                  <input type="hidden" name="inherit" value="true" />
-                                  <input type="hidden" name="app_label" value="projects" />
-                                  <input type="hidden" name="model" value="project" />
-                                  <input type="hidden" name="obj_pk" value="{{project.id}}" />
-                                  <input type="hidden" name="publish" value="PrivateStudentAndFaculty" />
-                              {% endif %}
-
-                              <textarea name="comment" class="form-control mceEditor"
-                                        placeholder="Offer feedback on this student's work">{{the_feedback.comment}}</textarea>
-
-                              <div class="spacer"></div>
-
-                              <div class="right">
-                                  <span class="alert alert-success" role="alert" style="display: none">
-                                      Your feedback was saved
-                                  </span>
-                                  <button class="btn btn-primary btn-sm save-feedback">
-                                      Save Feedback
-                                  </button>
-                              </div>
-                        </form>
-                        <div class="clearfix"></div>
-                    {% else %}
-                        <div class="left"><b>{% public_name for the_feedback.user %}</b></div>
-                        <div class="right"><b>{{the_feedback.submit_date|date:"m/d/Y h:i a"}}</b></div>
-                        <div class="clearfix"></div>
-                        <p>{{the_feedback.comment|safe}}</p>
-                    {% endif %}
-                </div>
-            {% endif %}
         </div>
     </div>
 </div>
 
-{% endwith %}
-{% endwith %}
 {% endblock %}
