Make Sequence composition save button always enabled - PMT #110186

--- a/mediathread/templates/projects/sequence.html
+++ b/mediathread/templates/projects/sequence.html
@@ -122,7 +122,7 @@
                         Reflection</a>
                 </li>
                 {% if response_can_edit %}
-                    <button class="btn btn-primary btn-tab btn-save disabled" disabled="disabled">Save</button>
+                    <button class="btn btn-primary btn-tab btn-save">Save</button>
                 {% endif %}
             </ul>
         </div>
