--- a/mediathread/templates/projects/sequence.html
+++ b/mediathread/templates/projects/sequence.html
@@ -131,7 +131,7 @@
         <!-- Tab panes -->
         <div class="tab-content">
             <div role="tabpanel"
-                 class="tab-pane fade in active {% if project.is_submitted %}submitted{% endif %}"
+                 class="tab-pane fade in active"
                  id="sequence">
                 <div class="loader">
                     <div class="ball-pulse">
