Add sequence composition visibility status - PMT #110187

--- a/mediathread/templates/projects/sequence.html
+++ b/mediathread/templates/projects/sequence.html
@@ -111,6 +111,13 @@
                     </div>
                 </div>
             </div>
+            <div class="right">
+                <div class="sequence-proj-status">
+                    {{project.status|safe}}
+                </div>
+            </div>
+            <div class="clearfix"></div>
+            <div class="spacer"></div>
             <ul class="nav nav-tabs navbar-right" role="tablist">
                 <li role="presentation" class="active editor">
                     <a href="#sequence" aria-controls="sequence-editor" role="tab" data-toggle="tab">
